# KidneyTumorCNNclassifier

./: .gitignore  README.md  app.py  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  scores.json  setup.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_base_model.ipynb  03_prepare_callbacks.ipynb  04_training.ipynb  05_model_eval.ipynb
src/cnnClassifier/components/: data_ingestion.py  evaluation.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py  stage_04_evaluation.py
templates/: index.html
