[project]
name = "kidney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dvc>=3.42.0",
    "ensure==1.0.2",
    "flask>=2.3.3",
    "flask-cors>=5.0.0",
    "gdown>=5.2.1",
    "joblib>=1.4.2",
    "matplotlib>=3.7.5",
    "mlflow==2.2.2",
    "notebook>=7.3.3",
    "numpy>=1.23.5",
    "pandas>=2.0.3",
    "python-box==6.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "tensorflow-macos==2.12.0",
    "tensorflow-metal>=1.2.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20241230",
]
